# retail-elt-beam-airflow

./: .dockerignore  .gitignore  ANEXOS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
beam-jobs/: job1_ingest_to_psa.py  job2_transform_gold.py
beam_jobs/: job1_ingest_to_psa.py  job2_transform_gold.py
dags/: dag_orden_ventas_latam.py  job1_ingest_to_psa.py  job2_transform_gold.py
data/errors/proc_date=2026-06-29/: anomalies-sales-00000-of-00001.json
data/errors/proc_date=2026-06-30/: anomalies-sales-00000-of-00001.json
data/gold/proc_date=2026-06-29/: gold-sales-00000-of-00001.parquet
data/gold/proc_date=2026-06-30/: gold-sales-00000-of-00001.parquet
data/inputs/: tipo_cambio.csv  ventas_buenos_aires.json  ventas_lima.parquet  ventas_santiago.csv
data/psa/proc_date=2026-06-29/: psa-sales-00000-of-00001.parquet
data/psa/proc_date=2026-06-30/: psa-sales-00000-of-00001.parquet
generate-data/: generar_datos_mock.py  generar_datos_random.py
generate_data/: generar_datos_mock.py  generar_datos_random.py
notebooks/: data_exploration.ipynb  data_ingest_with_schemas.ipynb  data_transform_gold.ipynb
