[project]
name = "retail-elt-beam-airflow"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=2.11.0,<3.0.0",
    "apache-airflow-providers-apache-beam>=6.1.0",
    "apache-beam==2.57.0",
    "ipykernel>=7.3.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pyarrow>=16.1.0,<24.0.0",
]
